--- a/kernel/trace/Kconfig
+++ b/kernel/trace/Kconfig
@@ -116,6 +116,20 @@ config TRACING
 config GENERIC_TRACER
 	bool "Generic Tracer"
 
+if TRACING
+
+config DISABLE_TRACE_PRINTK
+	bool "Force disable trace_printk() usage"
+	default y
+	help
+	  When trace_printk() is used in any of the kernel source, it enables
+	  debugging functions which are not desired for production kernel.
+	  Enabling this option will replace trace_printk() with pr_debug().
+
+	  If in doubt, say Y.
+
+endif
+
 #
 # Minimum requirements an architecture has to meet for us to
 # be able to offer generic tracing facilities:
