wifi: set inactivity time
Wait for 1 second to let wifi driver do
complete clean reset of SW/HW.

Bug: 121391366
Test: perform watchdog recovery and success
Test: check value by iwpriv wlan0 getConfig
Change-Id: I84674970d4b3c16876c4ebaf71043062d1867c87
Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>
Signed-off-by: Sudeep Duhoon <rishi.gothic@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -537,6 +537,9 @@ active_max_channel_time_2g=0
 # Enable/Disable emergency roaming during deauth/disassoc
 enable_disconnect_roam_offload=1
 
+#Timer waiting for interface up from the upper layer
+gInterfaceChangeWait=1000
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
