--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -540,6 +540,9 @@ enable_disconnect_roam_offload=1
 #Timer waiting for interface up from the upper layer
 gInterfaceChangeWait=1000
 
+# Enable NAN datapath
+genable_nan_datapath=1
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
