wifi: set IPA bandwidth mbps threshold to higher number
Set IPA low/med/high bandwidth mbps threshold to higher number
in ini cfg for msmnile target to achieve higher throughput.

Change-Id: I44386e1ef67d014a4bc79345b455422c75c4b03f
CRs-Fixed: 2516770
Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>

 Conflicts:
	wifi/WCNSS_qcom_cfg.ini

Signed-off-by: Sudeep Duhoon <rishi.gothic@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -102,6 +102,11 @@ RoamRssiDiff=5
 # To disable, set gRoamIntraBand=0 (Roaming across band)
 gRoamIntraBand=0
 
+# Set IPA low/med/high bandwidth mbps
+gIPALowBandwidthMbps=100
+gIPAMediumBandwidthMbps=400
+gIPAHighBandwidthMbps=800
+
 #Short Guard Interval Enable/disable
 gShortGI20Mhz=1
 gShortGI40Mhz=1
