--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -107,6 +107,9 @@ gIPALowBandwidthMbps=100
 gIPAMediumBandwidthMbps=400
 gIPAHighBandwidthMbps=800
 
+# Enable/Disable force bandwidth voting during IPA suspend
+gIPAForceVotingEnable=1
+
 #Short Guard Interval Enable/disable
 gShortGI20Mhz=1
 gShortGI40Mhz=1
