wifi: Disable spectral scan by default
Spectral scan gen3 based on FW changes, subsystem will assert if
without related FW changes. So disble spectral scan by default.

Change-Id: I49677e437c0742cc9e4a25ab1cc5a3a9643bbe0a
CRs-Fixed: 2569490
Signed-off-by: Park Ju Hyung <qkrwngud825@gmail.com>

 Conflicts:
	wifi/WCNSS_qcom_cfg.ini

Signed-off-by: Sudeep Duhoon <rishi.gothic@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -109,6 +109,7 @@ gIPAHighBandwidthMbps=800
 
 # Enable/Disable force bandwidth voting during IPA suspend
 gIPAForceVotingEnable=1
+spectral_disable=1
 
 #Short Guard Interval Enable/disable
 gShortGI20Mhz=1
